<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_getstarted"
    tools:context=".StartActivity">

  <androidx.viewpager.widget.ViewPager
      android:id="@+id/viewPager"
      android:layout_width="250dp"
      android:layout_height="230dp"
      android:layout_marginTop="40dp"
      android:background="@android:color/transparent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/seduh_space"
      android:textColor="@color/white"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/viewPager"
      app:layout_constraintStart_toStartOf="@+id/viewPager"
      app:layout_constraintTop_toTopOf="@+id/tabDots" />

  <com.google.android.material.tabs.TabLayout
      android:id="@+id/tabDots"
      android:layout_width="50dp"
      android:layout_height="10dp"
      android:layout_marginTop="8dp"
      android:background="@android:color/transparent"
      app:layout_constraintEnd_toEndOf="@+id/viewPager"
      app:layout_constraintStart_toStartOf="@+id/viewPager"
      app:layout_constraintTop_toBottomOf="@+id/viewPager"
      app:tabBackground="@drawable/tab_indicator_selector"
      app:tabGravity="center"
      app:tabIndicatorHeight="0dp"
      app:tabMode="fixed"
      app:tabPadding="8dp"
      app:tabSelectedTextColor="@color/BlueColor"
      app:tabTextColor="@color/brownPrimary" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/next"
      android:layout_width="155dp"
      android:layout_height="57dp"
      android:layout_marginBottom="18dp"
      android:background="@drawable/addtocartshape"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/next"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/textView7"
      app:layout_constraintEnd_toEndOf="@+id/textView6"
      app:layout_constraintStart_toStartOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:fontFamily="@font/poppins"
      android:text="@string/seduh_project"
      android:textColor="@color/blackPrimary"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <ProgressBar
      android:id="@+id/progressBarStart"
      style="@android:style/Widget.ProgressBar.Horizontal"
      android:layout_width="200dp"
      android:layout_height="6dp"
      android:progress="0"
      android:max="100"
      android:indeterminate="false"
      android:progressTint="@color/BlueColor"
      android:progressBackgroundTint="#DADADA"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toTopOf="@+id/next"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>
